tests/lean/hygienicIntro.lean.expected.out
hygienicIntro.lean:14:6: error: unknown identifier 'a_1'
hygienicIntro.lean:24:18: error: unknown identifier 'h'
